# ActiveAnomalyAggregation

./: .gitconfig  .gitignore  LICENSE  README.md  pyproject.toml
docs/source/content/Reproducible/: ReproducibleCode.ipynb
docs/source/content/examples/: MainExampleScript.ipynb
src/acanag/: __init__.py  acanag.py  active_loda.py  glad.py  loda_utils.py  plotting.py  reproducible.py  sampling.py
tests/: simu.py
